--- a/backend.html
+++ b/backend.html
@@ -17,12 +17,12 @@
     <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
     <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
-    <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css"> -->
 
 
 </head>
 <body class="bgpillars">
-    <header>
+    <!-- <header>
         <div class="navBtn">
         +
         </div>
@@ -41,7 +41,7 @@
 <a href="frontend.html">Customer Support Front-End</a>
 
         </nav>
-    </header>
+    </header> -->
     <div>
         <div class="fl-fl float-fb">
             <i class="fab fa-facebook fa-2x"></i> <a href="" target="_blank">Like us!</a>
@@ -56,108 +56,117 @@
             <i class="fab fa-instagram fa-2x"></i> <a href="" target="_blank">Follow us</a>
         </div>
     </div>
-    <div class="container">
-        <div class="section col s12 m10 l8 offset-l2">
-            <div class="row">
-                <div class="layer" data-depth="0.3">
-                    <div class="main">
-                        <!-- desktop -->
-                        <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
-                            <div class="col s12">
-                                <div class="card horizontal">
-                                <div class="card-image" id='backend'></div>
-                                    <div class="col s12 card-stacked">
-                                        <div class="card-content" style="color: black">
-                                            <h4 style="color: black; text-align: left">Customer Support (Back End)</h4>
-                                            <p style="text-align: left">Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. All you need to do is focus on creating amazing products or services for your business.</p>
-                                            <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                            <div data-collapse="collapse-content1"  data-text-close="Close">
-                                                <ul style="text-align: left">
-                                                    <li>Handle office admin processes</li>
-                                                    <li>Attract new customers into your systems.</li>
-                                                    <li>Enter data in a CRM system or update customer records</li>
-                                                    <li>Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</li>
-                                                    <li>Digitize your business to increase its accessibility</li>
-                                                    <li>Handle emails Inbound/Outbound Chat Support</li>
-                                                    <li>Handle all paperwork that can be processed online</li>
-                                                    <li>File documents</li>
-                                                    <li>Send electronic paper transactions</li>
-                                                    <li>Manage Accounting Applications – Ex: Xero and Intuit.</li>
-                                                </ul>
-                                            </div>    
-                                            <div class="card-action">
-                                                <span><a href="index.html#contact">Let's Talk</a></span>
-                                            </div>
-                                        </div>
-                                    </div>
+    <div class="container" style="width: 100% !important; max-width: 99%;">
+        <div class="section col s12 m10 l8 offset-l2" style="padding: 0 !important;">
+            <!-- desktop -->
+            <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
+                <div class="card horizontal row">
+                    <div class="col s8 card-content" id='backend'></div>
+                    <div class="col s6 card-content" style="color: black; padding: 5% !important;">
+                        <h5 style="color: black; text-align: left"><strong>Customer Support (Back End)</strong></h5>
+                        <p class="grey-text" style="text-align: left"><span>Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. All you need to do is focus on creating amazing products or services for your business.</span></p>
+                        <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                        <div data-collapse="collapse-content1"  data-text-close="Close">
+                            <ul class="grey-text" style="text-align: left">
+                                <li>Handle office admin processes</li>
+                                <li>Attract new customers into your systems.</li>
+                                <li>Enter data in a CRM system or update customer records</li>
+                                <li>Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</li>
+                                <li>Digitize your business to increase its accessibility</li>
+                                <li>Handle emails Inbound/Outbound Chat Support</li>
+                                <li>Handle all paperwork that can be processed online</li>
+                                <li>File documents</li>
+                                <li>Send electronic paper transactions</li>
+                                <li>Manage Accounting Applications – Ex: Xero and Intuit.</li>
+                            </ul>
+                        </div>    
+                        <div class="card-action">
+                            <span><a href="index.html#contact">Let's Talk</a></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- tablet -->
+            <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
+                <div class="col s12">
+                    <div class="card horizontal">
+                    <div class="card-image" id='backend'></div>
+                        <div class="col s12 card-stacked">
+                            <div class="card-content" style="color: black">
+                                <h4 style="color: black; text-align: left">Customer Support (Back End)</h4>
+                                <p style="text-align: left">Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. All you need to do is focus on creating amazing products or services for your business.</p>
+                                <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                                <div data-collapse="collapse-content1"  data-text-close="Close">
+                                    <ul style="text-align: left">
+                                        <li>Handle office admin processes</li>
+                                        <li>Attract new customers into your systems.</li>
+                                        <li>Enter data in a CRM system or update customer records</li>
+                                        <li>Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</li>
+                                        <li>Digitize your business to increase its accessibility</li>
+                                        <li>Handle emails Inbound/Outbound Chat Support</li>
+                                        <li>Handle all paperwork that can be processed online</li>
+                                        <li>File documents</li>
+                                        <li>Send electronic paper transactions</li>
+                                        <li>Manage Accounting Applications – Ex: Xero and Intuit.</li>
+                                    </ul>
+                                </div>    
+                                <div class="card-action">
+                                    <span><a href="index.html#contact">Let's Talk</a></span>
                                 </div>
                             </div>
                         </div>
-                        <!-- tablet -->
-                        <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
-                            <div class="col s12">
-                                <div class="card horizontal">
-                                <div class="card-image" id='backend'></div>
-                                    <div class="col s12 card-stacked">
-                                        <div class="card-content" style="color: black">
-                                            <h4 style="color: black; text-align: left">Customer Support (Back End)</h4>
-                                            <p style="text-align: left">Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. All you need to do is focus on creating amazing products or services for your business.</p>
-                                            <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                            <div data-collapse="collapse-content1"  data-text-close="Close">
-                                                <ul style="text-align: left">
-                                                    <li>Handle office admin processes</li>
-                                                    <li>Attract new customers into your systems.</li>
-                                                    <li>Enter data in a CRM system or update customer records</li>
-                                                    <li>Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</li>
-                                                    <li>Digitize your business to increase its accessibility</li>
-                                                    <li>Handle emails Inbound/Outbound Chat Support</li>
-                                                    <li>Handle all paperwork that can be processed online</li>
-                                                    <li>File documents</li>
-                                                    <li>Send electronic paper transactions</li>
-                                                    <li>Manage Accounting Applications – Ex: Xero and Intuit.</li>
-                                                </ul>
-                                            </div>    
-                                            <div class="card-action">
-                                                <span><a href="index.html#services">Let's Talk</a></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div><!-- mobile -->
-                        <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
-                            <div class="col s12">
-                                <div class="card col s12">
-                                    <div class="col s12 card-stacked">
-                                        <div class="card-content" style="color: black">
-                                            <h4 style="color: black; text-align: left">Customer Support (Back End)</h4>
-                                            <p style="text-align: left">Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. All you need to do is focus on creating amazing products or services for your business.</p>
-                                            <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                            <div data-collapse="collapse-content1"  data-text-close="Close">
-                                                <ul style="text-align: left">
-                                                    <li>Handle office admin processes</li>
-                                                    <li>Attract new customers into your systems.</li>
-                                                    <li>Enter data in a CRM system or update customer records</li>
-                                                    <li>Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</li>
-                                                    <li>Digitize your business to increase its accessibility</li>
-                                                    <li>Handle emails Inbound/Outbound Chat Support</li>
-                                                    <li>Handle all paperwork that can be processed online</li>
-                                                    <li>File documents</li>
-                                                    <li>Send electronic paper transactions</li>
-                                                    <li>Manage Accounting Applications – Ex: Xero and Intuit.</li>
-                                                </ul>
-                                            </div>   
-                                            <div class="card-action">
-                                                <span><a href="index.html#services">Let's Talk</a></span>
-                                            </div>
-                                        </div>
-                                    </div>
+                    </div>
+                </div>
+            </div><!-- mobile -->
+            <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
+                <div class="col s12">
+                    <div class="card col s12">
+                        <div class="col s12 card-stacked">
+                            <div class="card-content" style="color: black">
+                                <h4 style="color: black; text-align: left">Customer Support (Back End)</h4>
+                                <p style="text-align: left">Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. All you need to do is focus on creating amazing products or services for your business.</p>
+                                <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                                <div data-collapse="collapse-content1"  data-text-close="Close">
+                                    <ul style="text-align: left">
+                                        <li>Handle office admin processes</li>
+                                        <li>Attract new customers into your systems.</li>
+                                        <li>Enter data in a CRM system or update customer records</li>
+                                        <li>Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</li>
+                                        <li>Digitize your business to increase its accessibility</li>
+                                        <li>Handle emails Inbound/Outbound Chat Support</li>
+                                        <li>Handle all paperwork that can be processed online</li>
+                                        <li>File documents</li>
+                                        <li>Send electronic paper transactions</li>
+                                        <li>Manage Accounting Applications – Ex: Xero and Intuit.</li>
+                                    </ul>
+                                </div>   
+                                <div class="card-action">
+                                    <span><a href="index.html#contact">Let's Talk</a></span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div class="left">
+            <ul style="margin-top: -10px;">
+                <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
+                <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
+            </ul>
+        </div>
+        <div class="right">
+            <ul style="margin-top: -10px;">
+                <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
+                <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
+                <li style="top: 5px;position:  relative;">
+                    <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
+                    <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
+                    <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+                </li>
+            </ul>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script> 
