--- a/social.html
+++ b/social.html
@@ -108,7 +108,7 @@
                                         </ul>
                                         </div>  
                                         <div class="card-action">
-                                            <span><a href="index.html#services">Let's Talk</a></span>
+                                            <span><a href="index.html#contact">Let's Talk</a></span>
                                         </div>
                                         </div>
                                     </div>
@@ -133,7 +133,7 @@
                                         </ul>
                                         </div>  
                                         <div class="card-action">
-                                            <span><a href="index.html#services">Let's Talk</a></span>
+                                            <span><a href="index.html#contact">Let's Talk</a></span>
                                         </div>
                                         </div>
                                     </div>
