--- a/webdev.html
+++ b/webdev.html
@@ -109,7 +109,7 @@
                                         </ul>
                                         </div>   
                                         <div class="card-action">
-                                            <span><a href="index.html#services">Let's Talk</a></span>
+                                            <span><a href="index.html#contact">Let's Talk</a></span>
                                         </div>
                                         </div>
                                     </div>
@@ -134,7 +134,7 @@
                                         </ul>
                                         </div>    
                                         <div class="card-action">
-                                            <span><a href="index.html#services">Let's Talk</a></span>
+                                            <span><a href="index.html#contact">Let's Talk</a></span>
                                         </div>
                                         </div>
                                     </div>
