--- a/Lead.html
+++ b/Lead.html
@@ -17,11 +17,11 @@
     <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
     <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
-    <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css"> -->
 </head>
 <body class="bgpillars">
 <!-- Side Nav -->    
-    <header>
+    <!-- <header>
         <div class="navBtn">
         +
         </div>
@@ -39,7 +39,7 @@
             <a href="backend.html">Customer Support Back-End</a>
             <a href="frontend.html">Customer Support Front-End</a>
         </nav>
-    </header>
+    </header> -->
 <!-- Floating Social Media Side nav -->
     <div>
         <div class="fl-fl float-fb">
@@ -56,93 +56,102 @@
         </div>
     </div>
 <!-- Contents Starts here -->
-    <div class="container">
-        <div class="section col s12 m10 l8 offset-l2">
-            <div class="row">
-                <div class="layer" data-depth="0.3">
-                    <div class="main">
-                        <!-- desktop -->
-                        <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
-                            <div class="col s12">
-                                <div class="card horizontal">
-                                <div class="card-image" id='lead'></div>
-                                    <div class="col s12 card-stacked">
-                                        <div class="card-content" style="color: black">
-                                            <h3 style="color: black; text-align: left"><span>Lead Generation</span></h3>
-                                            <p style="text-align: left"><span>We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</span></p>
-                                            <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                            <div data-collapse="collapse-content1"  data-text-close="Close">
-                                                <ul style="text-align: left">
-                                                    <li><span>Content Marketing</span></li>
-                                                    <li><span>Social Media Marketing</span></li>
-                                                    <li><span>SEO</span></li>
-                                                    <li><span>Website Optimization</span></li>
-                                                    <li><span>Email Marketing</span></li>
-                                                </ul>
-                                            </div>    
-                                            <div class="card-action">
-                                                <span><a href="index.html#contact">Let's Talk</a></span>
-                                            </div>
-                                        </div>
-                                    </div>
+    <div class="container" style="width: 100% !important; max-width: 99%;">
+        <div class="section col s12 m10 l8 offset-l2" style="padding: 0 !important;">
+            <!-- desktop -->
+            <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
+                <div class="card horizontal row">
+                    <div class="col s8 card-content" id='lead'></div>
+                    <div class="col s6 card-content" style="color: black; padding: 5% !important;">
+                        <h5 style="color: black; text-align: left"><strong>Lead Generation</strong></h5>
+                        <p class="grey-text" style="text-align: left"><span>We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</span></p>
+                        <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                        <div data-collapse="collapse-content1"  data-text-close="Close">
+                            <ul class="grey-text" style="text-align: left">
+                                <li><span>Content Marketing</span></li>
+                                <li><span>Social Media Marketing</span></li>
+                                <li><span>SEO</span></li>
+                                <li><span>Website Optimization</span></li>
+                                <li><span>Email Marketing</span></li>
+                            </ul>
+                        </div>    
+                        <div class="card-action">
+                            <span><a href="index.html#contact">Let's Talk</a></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- tablet -->
+            <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
+                <div class="col s12">
+                    <div class="card horizontal">
+                    <div class="card-image" id='lead'></div>
+                        <div class="col s12 card-stacked">
+                            <div class="card-content" style="color: black">
+                                <h3 style="color: black; text-align: left"><span>Lead Generation</span></h3>
+                                <p style="text-align: left"><span>We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</span></p>
+                                <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                                <div data-collapse="collapse-content1"  data-text-close="Close">
+                                    <ul style="text-align: left">
+                                        <li><span>Content Marketing</span></li>
+                                        <li><span>Social Media Marketing</span></li>
+                                        <li><span>SEO</span></li>
+                                        <li><span>Website Optimization</span></li>
+                                        <li><span>Email Marketing</span></li>
+                                    </ul>
+                                </div>    
+                                <div class="card-action">
+                                    <span><a href="index.html#contact">Let's Talk</a></span>
                                 </div>
                             </div>
                         </div>
-                        <!-- tablet -->
-                        <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
-                            <div class="col s12">
-                                <div class="card horizontal">
-                                <div class="card-image" id='lead'></div>
-                                    <div class="col s12 card-stacked">
-                                        <div class="card-content" style="color: black">
-                                            <h3 style="color: black; text-align: left"><span>Lead Generation</span></h3>
-                                            <p style="text-align: left"><span>We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</span></p>
-                                            <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                            <div data-collapse="collapse-content1"  data-text-close="Close">
-                                                <ul style="text-align: left">
-                                                    <li><span>Content Marketing</span></li>
-                                                    <li><span>Social Media Marketing</span></li>
-                                                    <li><span>SEO</span></li>
-                                                    <li><span>Website Optimization</span></li>
-                                                    <li><span>Email Marketing</span></li>
-                                                </ul>
-                                            </div>    
-                                            <div class="card-action">
-                                                <span><a href="index.html#services">Let's Talk</a></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div><!-- mobile -->
-                        <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
-                            <div class="col s12">
-                                <div class="card col s12">
-                                    <div class="col s12 card-stacked">
-                                        <div class="card-content" style="color: black">
-                                            <h3 style="color: black; text-align: left"><span>Lead Generation</span></h3>
-                                            <p style="text-align: left"><span>We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</span></p>
-                                            <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                            <div data-collapse="collapse-content1"  data-text-close="Close">
-                                                <ul style="text-align: left">
-                                                    <li><span>Content Marketing</span></li>
-                                                    <li><span>Social Media Marketing</span></li>
-                                                    <li><span>SEO</span></li>
-                                                    <li><span>Website Optimization</span></li>
-                                                    <li><span>Email Marketing</span></li>
-                                                </ul>
-                                            </div>    
-                                            <div class="card-action">
-                                                <span><a href="index.html#services">Let's Talk</a></span>
-                                            </div>
-                                        </div>
-                                    </div>
+                    </div>
+                </div>
+            </div><!-- mobile -->
+            <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
+                <div class="col s12">
+                    <div class="card col s12">
+                        <div class="col s12 card-stacked">
+                            <div class="card-content" style="color: black">
+                                <h3 style="color: black; text-align: left"><span>Lead Generation</span></h3>
+                                <p style="text-align: left"><span>We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</span></p>
+                                <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                                <div data-collapse="collapse-content1"  data-text-close="Close">
+                                    <ul style="text-align: left">
+                                        <li><span>Content Marketing</span></li>
+                                        <li><span>Social Media Marketing</span></li>
+                                        <li><span>SEO</span></li>
+                                        <li><span>Website Optimization</span></li>
+                                        <li><span>Email Marketing</span></li>
+                                    </ul>
+                                </div>    
+                                <div class="card-action">
+                                    <span><a href="index.html#contact">Let's Talk</a></span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div class="left">
+            <ul style="margin-top: -10px;">
+                <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
+                <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
+            </ul>
+        </div>
+        <div class="right">
+            <ul style="margin-top: -10px;">
+                <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
+                <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
+                <li style="top: 5px;position:  relative;">
+                    <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
+                    <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
+                    <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+                </li>
+            </ul>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script> 
