--- a/frontend.html
+++ b/frontend.html
@@ -17,12 +17,12 @@
     <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
     <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
-    <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css"> -->
 
 
 </head>
 <body class="bgpillars">
-    <header>
+    <!-- <header>
         <div class="navBtn">
         +
         </div>
@@ -41,7 +41,7 @@
 <a href="frontend.html">Customer Support Front-End</a>
 
         </nav>
-    </header>
+    </header> -->
     <div>
         <div class="fl-fl float-fb">
             <i class="fab fa-facebook fa-2x"></i> <a href="" target="_blank">Like us!</a>
@@ -56,109 +56,99 @@
             <i class="fab fa-instagram fa-2x"></i> <a href="" target="_blank">Follow us</a>
         </div>
     </div>
-    <div class="container">
-        <div class="section col s12 m10 l8 offset-l2">
-            <div class="row">
-                <div class="layer" data-depth="0.3">
-                    <div class="main">
-                        <!-- desktop -->
-                        <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
-                            <div class="col s12">
-                                <div class="card horizontal">
-                                <div class="card-image" id='frontend'></div>
-                                    <div class="col s12 card-stacked">
-                                        <div class="card-content" style="color: black">
-                                        <h4 style="color: black; text-align: left">Customer Support (Front End)</h4>
-                                        <p style="text-align: left">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers. We provide on going support to the customers in order to keep the business running as smoothly as possible.</p>
-                                        <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                        <div data-collapse="collapse-content1"  data-text-close="Close">
-                                            <ul style="text-align: left">
-                                                <li>Resolve customer complaints via phone, email, mail, or social media.</li>
-                                                <li>Use telephones to reach out to customers.</li>
-                                                <li>Advise on company information.</li>
-                                                <li>Act as the company gatekeeper.</li>
-                                                <li>Suggest solutions for customer problems.</li>
-                                                <li>Inform customer of deals and promotions.</li>
-                                                <li>Sell products and services.</li>
-                                                <li>Utilize computer technology to handle high call volumes.</li>
-                                                <li>Work with customer service manager to ensure proper customer service is being delivered.</li>
-                                                <li>Close out or open call records.</li>
-                                                <li>Read from scripts.</li>
-                                                <li>Handle changes in service policies or renewals.</li>
-                                            </ul>
-                                        </div>   
-                                        <div class="card-action">
-                                            <span><a href="index.html#contact">Let's Talk</a></span>
-                                        </div>
-                                        </div>
-                                    </div>
-                                </div>
+    <div class="container" style="width: 100% !important; max-width: 99%;">
+        <div class="section col s12 m10 l8 offset-l2" style="padding: 0 !important;">
+            <!-- desktop -->
+            <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
+                <div class="card horizontal row">
+                <div class="col s8 card-content" id='frontend'></div>
+                    <div class="col s6 card-content" style="color: black; padding: 5% !important;">
+                    <h5 style="color: black; text-align: left"><strong>Customer Support (Front End)</strong></h5>
+                    <p class="grey-text" style="text-align: left"><span>Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers. We provide on going support to the customers in order to keep the business running as smoothly as possible.</span></p>
+                    <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                    <div data-collapse="collapse-content1"  data-text-close="Close">
+                        <ul class="grey-text" style="text-align: left">
+                            <li>Resolve customer complaints via phone, email, mail, or social media.</li>
+                            <li>Use telephones to reach out to customers.</li>
+                            <li>Advise on company information.</li>
+                            <li>Act as the company gatekeeper.</li>
+                            <li>Suggest solutions for customer problems.</li>
+                            <li>Inform customer of deals and promotions.</li>
+                            <li>Sell products and services.</li>
+                            <li>Utilize computer technology to handle high call volumes.</li>
+                            <li>Work with customer service manager to ensure proper customer service is being delivered.</li>
+                            <li>Close out or open call records.</li>
+                            <li>Read from scripts.</li>
+                            <li>Handle changes in service policies or renewals.</li>
+                        </ul>
+                    </div>   
+                    <div class="card-action">
+                        <span><a href="index.html#contact">Let's Talk</a></span>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <!-- tablet -->
+            <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
+                <div class="col s12">
+                    <div class="card horizontal">
+                    <div class="card-image" id='frontend'></div>
+                        <div class="col s12 card-stacked">
+                            <div class="card-content" style="color: black">
+                            <h4 style="color: black; text-align: left">Customer Support (Front End)</h4>
+                            <p style="text-align: left">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers. We provide on going support to the customers in order to keep the business running as smoothly as possible.</p>
+                            <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                            <div data-collapse="collapse-content1"  data-text-close="Close">
+                                <ul style="text-align: left">
+                                    <li>Resolve customer complaints via phone, email, mail, or social media.</li>
+                                    <li>Use telephones to reach out to customers.</li>
+                                    <li>Advise on company information.</li>
+                                    <li>Act as the company gatekeeper.</li>
+                                    <li>Suggest solutions for customer problems.</li>
+                                    <li>Inform customer of deals and promotions.</li>
+                                    <li>Sell products and services.</li>
+                                    <li>Utilize computer technology to handle high call volumes.</li>
+                                    <li>Work with customer service manager to ensure proper customer service is being delivered.</li>
+                                    <li>Close out or open call records.</li>
+                                    <li>Read from scripts.</li>
+                                    <li>Handle changes in service policies or renewals.</li>
+                                </ul>
+                            </div>     
+                            <div class="card-action">
+                                <span><a href="index.html#contact">Let's Talk</a></span>
+                            </div>
                             </div>
                         </div>
-                        <!-- tablet -->
-                        <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
-                            <div class="col s12">
-                                <div class="card horizontal">
-                                <div class="card-image" id='frontend'></div>
-                                    <div class="col s12 card-stacked">
-                                        <div class="card-content" style="color: black">
-                                        <h4 style="color: black; text-align: left">Customer Support (Front End)</h4>
-                                        <p style="text-align: left">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers. We provide on going support to the customers in order to keep the business running as smoothly as possible.</p>
-                                        <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                        <div data-collapse="collapse-content1"  data-text-close="Close">
-                                            <ul style="text-align: left">
-                                                <li>Resolve customer complaints via phone, email, mail, or social media.</li>
-                                                <li>Use telephones to reach out to customers.</li>
-                                                <li>Advise on company information.</li>
-                                                <li>Act as the company gatekeeper.</li>
-                                                <li>Suggest solutions for customer problems.</li>
-                                                <li>Inform customer of deals and promotions.</li>
-                                                <li>Sell products and services.</li>
-                                                <li>Utilize computer technology to handle high call volumes.</li>
-                                                <li>Work with customer service manager to ensure proper customer service is being delivered.</li>
-                                                <li>Close out or open call records.</li>
-                                                <li>Read from scripts.</li>
-                                                <li>Handle changes in service policies or renewals.</li>
-                                            </ul>
-                                        </div>     
-                                        <div class="card-action">
-                                            <span><a href="index.html#services">Let's Talk</a></span>
-                                        </div>
-                                        </div>
-                                    </div>
-                                </div>
+                    </div>
+                </div>
+            </div><!-- mobile -->
+            <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
+                <div class="col s12">
+                    <div class="card col s12">
+                        <div class="col s12 card-stacked">
+                        <div class="card-content" style="color: black">
+                            <h4 style="color: black; text-align: left">Customer Support (Front End)</h4>
+                            <p style="text-align: left">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers. We provide on going support to the customers in order to keep the business running as smoothly as possible.</p>
+                            <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                            <div data-collapse="collapse-content1"  data-text-close="Close">
+                                <ul style="text-align: left">
+                                    <li>Resolve customer complaints via phone, email, mail, or social media.</li>
+                                    <li>Use telephones to reach out to customers.</li>
+                                    <li>Advise on company information.</li>
+                                    <li>Act as the company gatekeeper.</li>
+                                    <li>Suggest solutions for customer problems.</li>
+                                    <li>Inform customer of deals and promotions.</li>
+                                    <li>Sell products and services.</li>
+                                    <li>Utilize computer technology to handle high call volumes.</li>
+                                    <li>Work with customer service manager to ensure proper customer service is being delivered.</li>
+                                    <li>Close out or open call records.</li>
+                                    <li>Read from scripts.</li>
+                                    <li>Handle changes in service policies or renewals.</li>
+                                </ul>
+                            </div>    
+                            <div class="card-action">
+                                <span><a href="index.html#contact">Let's Talk</a></span>
                             </div>
-                        </div><!-- mobile -->
-                        <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
-                            <div class="col s12">
-                                <div class="card col s12">
-                                    <div class="col s12 card-stacked">
-                                    <div class="card-content" style="color: black">
-                                        <h4 style="color: black; text-align: left">Customer Support (Front End)</h4>
-                                        <p style="text-align: left">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers. We provide on going support to the customers in order to keep the business running as smoothly as possible.</p>
-                                        <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                        <div data-collapse="collapse-content1"  data-text-close="Close">
-                                            <ul style="text-align: left">
-                                                <li>Resolve customer complaints via phone, email, mail, or social media.</li>
-                                                <li>Use telephones to reach out to customers.</li>
-                                                <li>Advise on company information.</li>
-                                                <li>Act as the company gatekeeper.</li>
-                                                <li>Suggest solutions for customer problems.</li>
-                                                <li>Inform customer of deals and promotions.</li>
-                                                <li>Sell products and services.</li>
-                                                <li>Utilize computer technology to handle high call volumes.</li>
-                                                <li>Work with customer service manager to ensure proper customer service is being delivered.</li>
-                                                <li>Close out or open call records.</li>
-                                                <li>Read from scripts.</li>
-                                                <li>Handle changes in service policies or renewals.</li>
-                                            </ul>
-                                        </div>    
-                                        <div class="card-action">
-                                            <span><a href="index.html#services">Let's Talk</a></span>
-                                        </div>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
