--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div id="fullpage">
         <div class="section col s12 bg ">
-            <div class="row center">
+            <div class="row center shadow">
                 <div class="layer wrapper" data-depth="0.3" id='nodes'>
                     <svg version="1.1" id="svg" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" x="0px" y="0px" viewBox="-311 185 400 400" style="enable-background:new -311 185 400 400;" xml:space="preserve">
                         <metadata>
@@ -80,7 +80,7 @@
                                 </div>
                                 <div class="text">
                                     <h5>Customer Support<br>
-                                    <strong>Back End</strong></h5>
+                                    Back End</h5>
                                 </div>
                             </div>
                             <div data-count='four' class="panel col s12 ">
@@ -89,7 +89,7 @@
                                 </div>
                                 <div class="text">
                                     <h5>Customer Support<br>
-                                    <strong>Front End</strong></h5>
+                                    Front End</h5>
                                 </div>
                             </div>
                         </div><!-- tablet -->
@@ -116,7 +116,7 @@
                                 </div>
                                 <div class="text">
                                     <h5>Customer Support<br>
-                                    <strong>Back End</strong></h5>
+                                    Back End</h5>
                                 </div>
                             </div>
                             <div data-count='four' class="panel col s3 ">
@@ -125,7 +125,7 @@
                                 </div>
                                 <div class="text">
                                     <h5>Customer Support<br>
-                                    <strong>Front End</strong></h5>
+                                    Front End</h5>
                                 </div>
                             </div>
                         </div><!-- desktop -->
@@ -152,7 +152,7 @@
                                 </div>
                                 <div class="text">
                                     <h5>Customer Support<br>
-                                    <strong>Back End</strong></h5>
+                                    Back End</h5>
                                 </div>
                             </div>
                             <div data-count='four' class="panel" id="d">
@@ -161,7 +161,7 @@
                                 </div>
                                 <div class="text">
                                     <h5>Customer Support<br>
-                                    <strong>Front End</strong></h5>
+                                    Front End</h5>
                                 </div>
                             </div>
                         </div>
