--- a/frontend.html
+++ b/frontend.html
@@ -156,6 +156,25 @@
             </div>
         </div>
     </div>
+    <div id="footer">
+        <div class="left">
+            <ul style="margin-top: -10px;">
+                <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
+                <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
+            </ul>
+        </div>
+        <div class="right">
+            <ul style="margin-top: -10px;">
+                <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
+                <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
+                <li style="top: 5px;position:  relative;">
+                    <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
+                    <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
+                    <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <script src="assets/js/jquery.min.js"></script> 
     <script src="assets/js/jquery.easings.min.js"></script> 
     <script src="assets/js/jquery.sidr.min.js"></script>
