--- a/social.html
+++ b/social.html
@@ -56,33 +56,29 @@
             <i class="fab fa-instagram fa-2x"></i> <a href="" target="_blank">Follow us</a>
         </div>
     </div>
-    <div class="container">
-        <div class="section col s12 m10 l8 offset-l2">
+    <div class="container" style="width: 100% !important; max-width: 99%;">
+        <div class="section col s12 m10 l8 offset-l2" style="padding: 0 !important;">
             <!-- desktop -->
             <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
-                <div class="col s12">
-                    <div class="card horizontal">
-                    <div class="card-image" id='social'></div>
-                        <div class="col s12 card-stacked">
-                            <div class="card-content" style="color: black">
-                                <h3 style="color: black; text-align: left">Social Media Management</h3>
-                                <p style="text-align: left">We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</p>
-                                <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                            <div data-collapse="collapse-content1"  data-text-close="Close">
-                            <ul style="text-align: left">
-                                <li>Content Marketing</li>
-                                <li>Social Media Marketing</li>
-                                <li>SEO</li>
-                                <li>Website Optimization</li>
-                                <li>Email Marketing</li>
-                            </ul>
-                            </div>    
-                            <div class="card-action">
-                                <span><a href="index.html#contact">Let's Talk</a></span>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="card horizontal row">
+                <div class="col s8 card-content" id='social'></div>
+                <div class="col s6 card-content" style="color: black; padding: 5% !important;">
+                    <h5 style="color: black; text-align: left"><strong>Social Media Management</strong></h5>
+                    <p class="grey-text" style="text-align: left"><span>We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</span></p>
+                    <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                <div data-collapse="collapse-content1"  data-text-close="Close">
+                <ul class="grey-text" style="text-align: left">
+                    <li>Content Marketing</li>
+                    <li>Social Media Marketing</li>
+                    <li>SEO</li>
+                    <li>Website Optimization</li>
+                    <li>Email Marketing</li>
+                </ul>
+                </div>    
+                <div class="card-action">
+                    <span><a href="index.html#contact">Let's Talk</a></span>
+                </div>
+                </div>
                 </div>
             </div>
             <!-- tablet -->
